# tracey

./: Cargo.toml  LICENSE  README.md  color_test  color_test.rs
.tracey/: graph.db  graph.db-shm  graph.db-wal
crates/tracey-agent/: Cargo.toml
crates/tracey-agent/src/: agent.rs  compaction.rs  git.rs  lib.rs  observer.rs
crates/tracey-ast/: Cargo.toml
crates/tracey-ast/src/: builder.rs  lib.rs  parser.rs
crates/tracey-cli/: Cargo.toml
crates/tracey-cli/src/: main.rs
crates/tracey-config/: Cargo.toml
crates/tracey-config/src/: config.rs  credentials.rs  instruction_files.rs  interactive.rs  lib.rs  oauth.rs  setup.rs
crates/tracey-core/: Cargo.toml
crates/tracey-core/src/: error.rs  events.rs  id.rs  lib.rs  traits.rs  types.rs
crates/tracey-graph/: Cargo.toml
crates/tracey-graph/src/: lib.rs  persistence.rs  query.rs  serialize.rs  store.rs  verify.rs
crates/tracey-hooks/: Cargo.toml
crates/tracey-hooks/src/: lib.rs  runner.rs
crates/tracey-llm/: Cargo.toml
crates/tracey-llm/src/: anthropic.rs  lib.rs  openai.rs  router.rs
crates/tracey-memory/: Cargo.toml
crates/tracey-memory/src/: lib.rs  manager.rs
crates/tracey-sandbox/: Cargo.toml
crates/tracey-sandbox/src/: executor.rs  lib.rs  policy.rs
crates/tracey-search/: Cargo.toml
crates/tracey-search/src/: hybrid.rs  index.rs  lib.rs
crates/tracey-session/: Cargo.toml
crates/tracey-session/src/: lib.rs  store.rs
crates/tracey-skills/: Cargo.toml
crates/tracey-skills/src/: lib.rs  loader.rs
crates/tracey-telegram/: Cargo.toml
crates/tracey-telegram/src/: bot.rs  lib.rs
crates/tracey-tools/: Cargo.toml
crates/tracey-tools/src/: lib.rs  registry.rs
crates/tracey-tools/src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
crates/tracey-tui/: Cargo.toml
crates/tracey-tui/src/: app.rs  art.rs  banner.rs  commands.rs  lib.rs  logo.rs  palette.rs  shimmer.rs  theme.rs  welcome.rs
