[package]
name = "tracey-cli"
version = "0.1.0"
edition = "2021"
description = "CLI entry point for Tracey"

[[bin]]
name = "tracey"
path = "src/main.rs"

[dependencies]
tracey-core = { workspace = true }
tracey-config = { workspace = true }
tracey-llm = { workspace = true }
tracey-tools = { workspace = true }
tracey-agent = { workspace = true }
tracey-graph = { workspace = true }
tracey-ast = { workspace = true }
tracey-tui = { workspace = true }
tracey-telegram = { workspace = true }
tracey-session = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
