[package]
name = "tracey-config"
version = "0.1.0"
edition = "2021"
description = "Configuration, credentials, and setup for Tracey"

[dependencies]
tracey-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dirs = "5"
crossterm = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
