[package]
name = "tracey-graph"
version = "0.1.0"
edition = "2021"
description = "Causal graph kernel for Tracey"

[dependencies]
tracey-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
