[package]
name = "tracey-llm"
version = "0.1.0"
edition = "2021"
description = "Provider-agnostic LLM interface for Tracey"

[dependencies]
tracey-core = { workspace = true }
tracey-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = "1"
