[package]
name = "tracey-tools"
version = "0.1.0"
edition = "2021"
description = "Tool registry and core tools for Tracey"

[dependencies]
tracey-core = { workspace = true }
tracey-sandbox = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
glob = "0.3"
