[package]
name = "tracey-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for Tracey"

[dependencies]
tracey-core = { workspace = true }
tracey-agent = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
